<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_20">

    <ImageView
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:src="@mipmap/bitcoin"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_20"
        android:contentDescription="@string/app_icon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/login"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        android:padding="@dimen/dp_10"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/dp_20"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_id"
        android:textColorHint="@color/text_hint_color"
        android:layout_marginTop="@dimen/dp_20"
        android:padding="@dimen/dp_5">
        <EditText
            android:id="@+id/userIdET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/colorAccent"
            android:inputType="text"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/text_hint_color"
        android:layout_marginTop="@dimen/dp_10"
        android:padding="@dimen/dp_5">
        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/colorAccent"
            android:inputType="textPassword"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/forgetPassworNav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password_"
        android:textColor="@drawable/login_screen_nav_text_bg"
        android:layout_gravity="end"
        android:padding="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_5"
        android:textSize="@dimen/sp_16"/>

    <TextView
        android:id="@+id/forgetUserIdNav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_user_id_"
        android:textColor="@drawable/login_screen_nav_text_bg"
        android:layout_gravity="end"
        android:padding="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_5"
        android:textSize="@dimen/sp_16"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/dp_200"
        android:text="@string/login"
        android:textColor="@color/colorAccent"
        android:background="@drawable/simple_button_bg"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_60"
        android:textSize="@dimen/sp_15"/>

</LinearLayout>