<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/sp_20"
        android:text="@string/forget_password_heading"
        android:layout_marginTop="@dimen/dp_60"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/recoveryOptionTL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_id"
        android:textColorHint="@color/text_hint_color"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:padding="@dimen/dp_5">
        <EditText
            android:id="@+id/recoveryOptionET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/colorAccent"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20">
        <RadioButton
            android:id="@+id/byEmailRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/textColor"
            android:text="@string/recover_by_email"
            android:checked="true"
            android:padding="@dimen/dp_10"/>

        <RadioButton
            android:id="@+id/byUserIdRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/textColor"
            android:text="@string/recover_by_user_id"
            android:padding="@dimen/dp_10"/>
    </RadioGroup>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/dp_150"
        android:text="@string/submit"
        android:textColor="@color/colorAccent"
        android:background="@drawable/simple_button_bg"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_60"
        android:textSize="@dimen/sp_15"/>

</LinearLayout>