<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/sp_20"
        android:text="@string/otp_heading_text"
        android:layout_marginTop="@dimen/dp_60"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"/>

    <EditText
        android:id="@+id/otpCodeET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/colorAccent"
        android:inputType="number"
        android:maxLines="1"
        android:gravity="center_horizontal"
        android:hint="@string/otp_code"
        android:textColorHint="@color/text_hint_color"
        android:layout_marginTop="@dimen/dp_60"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20" />

    <Button
        android:id="@+id/verifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/dp_150"
        android:text="@string/verify"
        android:textColor="@color/colorAccent"
        android:background="@drawable/simple_button_bg"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_60"
        android:textSize="@dimen/sp_15"/>
</LinearLayout>