<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_20">
        <ImageView
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:src="@mipmap/ic_logo"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/sign_up"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            android:padding="@dimen/dp_10"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/dp_10"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sponsor_id"
            android:textColorHint="@color/text_hint_color"
            android:layout_marginTop="@dimen/dp_10"
            android:paddingTop="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5">
            <EditText
                android:id="@+id/sponsorIdET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/colorAccent"
                android:inputType="text"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="@color/text_hint_color"
            android:layout_marginTop="@dimen/dp_5"
            android:paddingTop="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5">
            <EditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/colorAccent"
                android:inputType="text"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_no"
            android:textColorHint="@color/text_hint_color"
            android:layout_marginTop="@dimen/dp_5"
            android:paddingTop="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5">
            <EditText
                android:id="@+id/mobileNoET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/colorAccent"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="10"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:textColorHint="@color/text_hint_color"
            android:layout_marginTop="@dimen/dp_5"
            android:paddingTop="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5">
            <EditText
                android:id="@+id/emailIDET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/colorAccent"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/text_hint_color"
            android:layout_marginTop="@dimen/dp_5"
            android:paddingTop="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5">
            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/colorAccent"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/text_hint_color"
            android:layout_marginTop="@dimen/dp_5"
            android:paddingTop="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5">
            <EditText
                android:id="@+id/confirmPasswordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/colorAccent"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/dp_5">
            <CheckBox
                android:id="@+id/tncCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_accept"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/colorAccent"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"/>
            <TextView
                android:id="@+id/tncNav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_15"
                android:textColor="@drawable/signup_screen_nav_text_bg"
                android:text="@string/terms_conditions_" />
        </LinearLayout>



        <Button
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/dp_200"
            android:text="@string/sign_up"
            android:textColor="@color/colorAccent"
            android:background="@drawable/simple_button_bg"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_60"
            android:textSize="@dimen/sp_15"/>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>